exports[`Details renders correctly with a selection but no data yet 1`] = `
<div
  style={
    Object {
      "WebkitFlex": "none",
      "backgroundColor": "#dcd6ff",
      "flex": "none",
      "marginTop": 5,
      "minHeight": 110,
      "padding": 5
    }
  }>
  <div
    style={
      Object {
        "fontWeight": 900,
        "letterSpacing": 3,
        "marginBottom": 10,
        "textAlign": "center"
      }
    }>
    DETAILS
  </div>
  <div
    className="giu-large-message"
    style={
      Object {
        "color": "#999999",
        "fontSize": "1.4em",
        "fontWeight": 700,
        "padding": "0.8em",
        "textAlign": "center"
      }
    }>
    <i
      className="giu-icon fa fa-circle-o-notch fa-spin"
      style={
        Object {
          "color": undefined,
          "cursor": "pointer",
          "letterSpacing": "normal"
        }
      } />
  </div>
</div>
`;

exports[`Details renders correctly without a selection 1`] = `
<div
  style={
    Object {
      "WebkitFlex": "none",
      "backgroundColor": "#dcd6ff",
      "flex": "none",
      "marginTop": 5,
      "minHeight": 110,
      "padding": 5
    }
  }>
  <div
    style={
      Object {
        "fontWeight": 900,
        "letterSpacing": 3,
        "marginBottom": 10,
        "textAlign": "center"
      }
    }>
    DETAILS
  </div>
  <div
    className="giu-large-message"
    style={
      Object {
        "color": "#999999",
        "fontSize": "1.4em",
        "fontWeight": 700,
        "padding": "0.8em",
        "textAlign": "center"
      }
    }>
    No message selected
  </div>
</div>
`;

exports[`Details when the details for the selection are available renders correctly for a message that is unused 1`] = `
<div
  style={
    Object {
      "WebkitFlex": "none",
      "backgroundColor": "#dcd6ff",
      "flex": "none",
      "marginTop": 5,
      "minHeight": 110,
      "padding": 5
    }
  }>
  <div
    style={
      Object {
        "fontWeight": 900,
        "letterSpacing": 3,
        "marginBottom": 10,
        "textAlign": "center"
      }
    }>
    DETAILS
  </div>
  <div>
    <div>
      Some details
    </div>
    Used since
     
    <span
      style={
        Object {
          "color": "#444",
          "fontWeight": "bold"
        }
      }
      title="Monday, April 18, 2016 7:37 AM">
      5 months ago
    </span>
    <span>
       
      until
       
      <span
        style={
          Object {
            "color": "#444",
            "fontWeight": "bold"
          }
        }
        title="Thursday, April 21, 2016 7:37 AM">
        5 months ago
      </span>
    </span>
  </div>
</div>
`;

exports[`Details when the details for the selection are available renders correctly for a message that is used 1`] = `
<div
  style={
    Object {
      "WebkitFlex": "none",
      "backgroundColor": "#dcd6ff",
      "flex": "none",
      "marginTop": 5,
      "minHeight": 110,
      "padding": 5
    }
  }>
  <div
    style={
      Object {
        "fontWeight": 900,
        "letterSpacing": 3,
        "marginBottom": 10,
        "textAlign": "center"
      }
    }>
    DETAILS
  </div>
  <div>
    <div>
      Some details
    </div>
    Used since
     
    <span
      style={
        Object {
          "color": "#444",
          "fontWeight": "bold"
        }
      }
      title="Monday, April 18, 2016 7:37 AM">
      5 months ago
    </span>
    :
    <ul
      style={
        Object {
          "marginTop": 0
        }
      }>
      <li>
        src/client/components/060-translator.js
      </li>
    </ul>
  </div>
</div>
`;
